# risc-v-wb

./: .svlint.toml  LICENSE
docs/: cpu_state.dot  irq_ideas.txt  memory_map.txt
firmware/as/: flash.txt  test.s
firmware/cc/: std.mk
firmware/cc/examples/pwm/src/: irq_vec.c
firmware/cc/sys/: boot.S  delay.c  delay.h  device.h  intrin.h  rv32.h
rtl/artya7/: .gitignore  artya7.xdc  artya7_pll.sv  debouncer.sv  risc-v-wb.xpr  synchronizer.sv  testbench_behav.wcfg  top.sv
rtl/memory/: flash.txt
rtl/sim/: top_verilator.sv
rtl/sim/verilator/: Makefile  Makefile_obj  sim_main.cpp
rtl/sim/verilator_cmake/: CMakeLists.txt  settings.gtkw
rtl/sim/verilator_cmake/src/: sim_main.cpp
rtl/sim_vivado/: tb_post_synth.sv  tb_soc.sv
rtl/soc/: soc.sv  top.sv
rtl/soc/core/: alu.sv  core.sv  core_defines.vh  imm_generator.sv  register_file.sv
rtl/soc/peripherals/: data_memory.sv  external_irq_controller.sv  leds.sv  program_memory.sv  timer.sv
rtl/soc/peripherals/uart/: uart_rx.sv
rtl/soc/wishbone/: wb_bus.sv  wb_bus.vh  wb_endian_adapter.sv  wb_interconnect.sv  wb_master.sv  wb_master.vh
